# BTRFdom

./: .gitignore  .gitmodules  CMakeLists.txt  File.h  README.md  main.cpp
BTRF/: Block.cpp  Block.h  Parser.cpp  Parser.h  RootBlock.cpp  RootBlock.h  TemplateDefinitions.cpp  TemplateDefinitions.h  UnknownMagicException.cpp  UnknownMagicException.h
TML/: Block.cpp  Block.h  MemberType.h  TMLFile.cpp  TMLFile.h  TemplateField.h
common/: ExportDLL.h  Guid.h
dll-client/: main.cpp
dll-client-blender-export/io_scene_btrf/: __init__.py  btrfdom.py  export_btrf.py  export_nx3.py  import_btrf.py  import_nx3.py  nobj.tml  nx3.tml
dll-client-cpp/: CMakeLists.txt  main.cpp
dll-client-python/: create-file.py  print-content.py
dll-test-cpp/: CMakeLists.txt  main.cpp
impl/: BtrfBlock.cpp  BtrfBlock.h  BtrfParser.cpp  BtrfParser.h  BtrfRootBlock.cpp  BtrfRootBlock.h  File.cpp  File.h  MemberType.h  TmlBlock.cpp  TmlBlock.h  TmlFile.cpp  TmlFile.h  main.cpp
interfaces/: IBtrfBlock.cpp  IBtrfBlock.h  IBtrfParser.cpp  IBtrfParser.h  IBtrfRootBlock.cpp  IBtrfRootBlock.h  IObject.h  ITmlBlock.cpp  ITmlBlock.h  ITmlFile.cpp  ITmlFile.h  InterfaceC.cpp  InterfaceC.h
linux-project/: CMakeLists.txt
shared-lib/: CMakeLists.txt
shared-lib/common/: ExportDLL.h  Guid.h  MemberType.h
shared-lib/impl/: BtrfBlock.cpp  BtrfBlock.h  BtrfParser.cpp  BtrfParser.h  BtrfRootBlock.cpp  BtrfRootBlock.h  File.cpp  File.h  TmlBlock.cpp  TmlBlock.h  TmlFile.cpp  TmlFile.h
shared-lib/impl/definitions/: nobj.h  nx3.h  tmlToHeader.sh
shared-lib/interfaces/: IBtrfBlock.cpp  IBtrfBlock.h  IBtrfParser.cpp  IBtrfParser.h  IBtrfRootBlock.cpp  IBtrfRootBlock.h  IObject.h  ITmlBlock.cpp  ITmlBlock.h  ITmlFile.cpp  ITmlFile.h  InterfaceC.cpp  InterfaceC.h
win-project/: CMakeLists.txt
